Fix menu z-index, zmiana miniatur w plupload

--- a/src/CmsAdmin/Resource/web/css/style.css
+++ b/src/CmsAdmin/Resource/web/css/style.css
@@ -156,7 +156,7 @@ nav#main-menu {
 
 nav#main-menu ul.menu {
 	margin-bottom: 1.5em;
-	z-index: 601;
+	z-index: 91;
 }
 
 table tr th input {
